k8s/apps/warpgate/warpgate.yaml
# loosely based on https://warpgate.null.page/getting-started-on-helm/
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warpgate
spec:
  ingressClassName: traefik
  rules:
  - host: warp.cocointhe.cloud
    http:
      paths:
      - backend:
          service:
            name: warpgate
            port:
              number: 8888
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - warp.cocointhe.cloud

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: warpgate-warpgate@kubernetescrd
  name: warpgate
spec:
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: warpgate
  type: ClusterIP

---
# additional LoadBalancers for specific protocols (ssh/kubernetes)
apiVersion: v1
kind: Service
metadata:
  name: warpgate-protocols
spec:
  ports:
  - port: 2202
    protocol: TCP
    targetPort: 2202
    name: ssh
  - port: 8443
    protocol: TCP
    targetPort: 8443
    name: kubernetes
  selector:
    app: warpgate
  type: LoadBalancer
